@@ -16,13 +16,18 @@
  */
 package org.jamwiki.servlets;
 
+import java.io.File;
 import java.util.Iterator;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import org.apache.commons.fileupload.FileItem;
 import org.jamwiki.utils.WikiLogger;
+import org.jamwiki.Environment;
+import org.jamwiki.WikiException;
 import org.jamwiki.WikiMessage;
+import org.jamwiki.model.WikiUser;
 import org.jamwiki.utils.Utilities;
+import org.jamwiki.utils.XMLTopicFactory;
 import org.springframework.web.servlet.ModelAndView;
 
 /**
@@ -55,15 +60,16 @@ public class ImportServlet extends JAMWikiServlet {
 	private void importFile(HttpServletRequest request, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
 		String virtualWiki = Utilities.getVirtualWikiFromURI(request);
 		Iterator iterator = ServletUtil.processMultipartRequest(request);
+		WikiUser user = Utilities.currentUser(request);
+		XMLTopicFactory importer = new XMLTopicFactory();
 		while (iterator.hasNext()) {
 			FileItem item = (FileItem)iterator.next();
-			String fieldName = item.getFieldName();
 			if (item.isFormField()) {
-				// process form fields
-			} else {
-				String xml = item.getString("UTF-8");
-				// FIXME - process XML
+				continue;
 			}
+			File xmlFile = saveFileItem(item);
+			importer.importWikiXml(xmlFile, virtualWiki, user, request.getRemoteAddr());
+			xmlFile.delete();
 		}
 		// FIXME - redirect where?
 		importView(request, next, pageInfo);
@@ -76,5 +82,23 @@ public class ImportServlet extends JAMWikiServlet {
 		pageInfo.setAction(WikiPageInfo.ACTION_IMPORT);
 		pageInfo.setPageTitle(new WikiMessage("import.title"));
 		pageInfo.setSpecial(true);
+	}
+
+	/**
+	 *
+	 */
+	private File saveFileItem(FileItem item) throws Exception {
+    	// upload user file to the server
+		String subdirectory = "tmp";
+		File directory = new File(Environment.getValue(Environment.PROP_FILE_DIR_FULL_PATH), subdirectory);
+		if (!directory.exists() && !directory.mkdirs()) {
+			throw new WikiException(new WikiMessage("upload.error.directorycreate",  directory.getAbsolutePath()));
+		}
+		// use current timestamp as unique file name
+		String filename = System.currentTimeMillis() + ".xml";
+		File xmlFile = new File(directory, filename);
+		// transfer remote file
+		item.write(xmlFile);
+		return xmlFile;
 	}
 }
